Archive2/ea/9ed4482306ce17/output
main.cpp:16:65: error: expected ';' at end of member declaration
     const  CallbackPack<S, S> callbackPack123 = CallbackPack<S, S>((*this));
                                                                 ^
main.cpp:16:66: error: expected unqualified-id before '>' token
     const  CallbackPack<S, S> callbackPack123 = CallbackPack<S, S>((*this));
                                                                  ^
main.cpp:16:65: warning: non-static const member 'const S::CallbackPack<S, S> S::S' in class without a constructor [-Wuninitialized]
     const  CallbackPack<S, S> callbackPack123 = CallbackPack<S, S>((*this));
                                                                 ^
main.cpp:16:62: error: wrong number of template arguments (1, should be 2)
     const  CallbackPack<S, S> callbackPack123 = CallbackPack<S, S>((*this));
                                                              ^
main.cpp:9:12: error: provided for 'template<class IdsT, class DataT> struct S::CallbackPack'
     struct CallbackPack{
            ^
